--- a/main.html
+++ b/main.html
@@ -7,20 +7,15 @@
 </head>
 
 <body>
-	<ol type="i">
-		<li>
-			<blockquote class="question"><p>Who was the first female to become the governor of an Indian state?</p></blockquote>
-			
-		</li>
-		<li>
-			<blockquote class="question"><p>Who among first Woman to climb Mount Everest twice?</p></blockquote>
-			
-		</li>
-		<li>
-			<blockquote class="question"><p>Who is President of India?</p></blockquote>
-			
-		</li>
-	</ol>
+	<blockquote class="questions">
+    <p>Who was the first female to become the governor of an Indian state?</p>
+</blockquote>
+<blockquote class="questions">
+    <p>Who among the first women to climb Mount Everest twice?</p>
+</blockquote>
+<blockquote class="questions">
+    <p>Who is the President of India?</p>
+</blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
