--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
     <p>Who was the first female to become the governor of an Indian state?</p>
 </blockquote>
 <blockquote class="questions">
-    <p>Who among the first women to climb Mount Everest twice?</p>
+    <p>Who among first Woman to climb Mount Everest twice?</p>
 </blockquote>
 <blockquote class="questions">
-    <p>Who is the President of India?</p>
+    <p>Who is President of India?</p>
 </blockquote>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
